--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .env
-/__pycache__/
+__pycache__/
 /Services/py__cache__/
+/Controllers/py__cache__/
+/Errors/py__cache__/
+/Responses/py__cache__/
+/Models/py__cache__/
