--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,26 @@
 click==8.0.1
+cycler==0.10.0
 Flask==2.0.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
+joblib==1.0.1
+kiwisolver==1.3.2
 MarkupSafe==2.0.1
+matplotlib==3.4.3
 mysql-connector-python==8.0.26
+numpy==1.21.2
+pandas==1.3.3
+Pillow==8.3.2
 protobuf==3.17.3
 PyJWT==2.1.0
+pyparsing==2.4.7
+python-dateutil==2.8.2
 python-dotenv==0.19.0
+pytz==2021.1
+scikit-learn==0.24.2
+scipy==1.7.1
+seaborn==0.11.2
 six==1.16.0
+sklearn==0.0
+threadpoolctl==2.2.0
 Werkzeug==2.0.1
