--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -12,7 +12,7 @@ services:
         - /Users/sthefanopolitino/Documents/Tesis/db/volume:/var/lib/mysql
     microservicio:
         container_name: microservicio
-        image: docker.pkg.github.com/polisthefano/valuewineback/microservicio:dev
+        image: sthefanopoli/microservicio_valuewine:dev
         environment:
             USERDB: root
             PASSDB: root
